--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -1,17 +1,17 @@
-Equipes
-EST
-ATLANTIC
-Boston Celtics
+<h1>Equipes</h1>
+<p><h2>EST</h2>
+<h2>ATLANTIC</h2>
+<p>Boston Celtics
 Brooklyn Nets
 New York Knicks
 Philadelphia 76ers
-Toronto Raptors
-CENTRAL
-Chicago Bulls
+Toronto Raptors</p>
+<h2>CENTRAL</h2>
+<p>Chicago Bulls
 Cleveland Cavaliers
 Detroit Pistons
 Indiana Pacers
-Milwaukee Bucks
+Milwaukee Bucks</p>
 SOUTHEAST
 Atlanta Hawks
 Charlotte Hornets
