--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -12,28 +12,28 @@ Cleveland Cavaliers
 Detroit Pistons
 Indiana Pacers
 Milwaukee Bucks</p>
-SOUTHEAST
-Atlanta Hawks
+<h2>SOUTHEAST</h2>
+<p>Atlanta Hawks
 Charlotte Hornets
 Miami Heat
 Orlando Magic
-Washington Wizards
-OUEST
-NORTHWEST
-Denver Nuggets
+Washington Wizards</p>
+<h2>OUEST</h2>
+<h2>NORTHWEST</h2>
+<p>Denver Nuggets
 Minnesota Timberwolves
 Oklahoma City Thunder
 Portland Trail Blazers
-Utah Jazz
-PACIFIC
-Golden State Warriors
+Utah Jazz</p>
+<h2>PACIFIC</h2>
+<p>Golden State Warriors
 LA Clippers
 Los Angeles Lakers
 Phoenix Suns
-Sacramento Kings
-SOUTHWEST
-Dallas Mavericks
+Sacramento Kings</p>
+<h2>SOUTHWEST</h2>
+<p>Dallas Mavericks
 Houston Rockets
 Memphis Grizzlies
 New Orleans Pelicans
-San Antonio Spurs
+San Antonio Spurs</p>
