--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -1,39 +1,39 @@
 <h1>Equipes</h1>
 <p><h2>EST</h2>
 <h2>ATLANTIC</h2>
-<p>Boston Celtics
-Brooklyn Nets
-New York Knicks
-Philadelphia 76ers
+<p>Boston Celtics</br>
+Brooklyn Nets</br>
+New York Knicks</br>
+Philadelphia 76ers</br>
 Toronto Raptors</p>
 <h2>CENTRAL</h2>
-<p>Chicago Bulls
-Cleveland Cavaliers
-Detroit Pistons
-Indiana Pacers
+<p>Chicago Bulls</br>
+Cleveland Cavaliers</br>
+Detroit Pistons</br>
+Indiana Pacers</br>
 Milwaukee Bucks</p>
 <h2>SOUTHEAST</h2>
-<p>Atlanta Hawks
-Charlotte Hornets
-Miami Heat
-Orlando Magic
+<p>Atlanta Hawks</br>
+Charlotte Hornets</br>
+Miami Heat</br>
+Orlando Magic</br>
 Washington Wizards</p>
 <h2>OUEST</h2>
 <h2>NORTHWEST</h2>
-<p>Denver Nuggets
-Minnesota Timberwolves
-Oklahoma City Thunder
-Portland Trail Blazers
+<p>Denver Nuggets</br>
+Minnesota Timberwolves</br>
+Oklahoma City Thunder</br>
+Portland Trail Blazers</br>
 Utah Jazz</p>
 <h2>PACIFIC</h2>
-<p>Golden State Warriors
-LA Clippers
-Los Angeles Lakers
-Phoenix Suns
+<p>Golden State Warriors</br>
+LA Clippers</br>
+Los Angeles Lakers</br>
+Phoenix Suns</br>
 Sacramento Kings</p>
 <h2>SOUTHWEST</h2>
-<p>Dallas Mavericks
-Houston Rockets
-Memphis Grizzlies
-New Orleans Pelicans
+<p>Dallas Mavericks</br>
+Houston Rockets</br>
+Memphis Grizzlies</br>
+New Orleans Pelicans</br>
 San Antonio Spurs</p>
