--- a/04a-pratique-h1-h6/equipes-nba.html
+++ b/04a-pratique-h1-h6/equipes-nba.html
@@ -1,39 +1,39 @@
-Equipes
-EST
-ATLANTIC
-Boston Celtics
+<h1>Equipes</h1>
+<p><h2>EST</h2></p>
+<h2>ATLANTIC</h2>
+<p>Boston Celtics
 Brooklyn Nets
 New York Knicks
 Philadelphia 76ers
-Toronto Raptors
-CENTRAL
-Chicago Bulls
+Toronto Raptors</p>
+<h2>CENTRAL</h2>
+<p>Chicago Bulls
 Cleveland Cavaliers
 Detroit Pistons
 Indiana Pacers
-Milwaukee Bucks
-SOUTHEAST
-Atlanta Hawks
+Milwaukee Bucks</p>
+<h2>SOUTHEAST</h2>
+<p>Atlanta Hawks
 Charlotte Hornets
 Miami Heat
 Orlando Magic
-Washington Wizards
-OUEST
-NORTHWEST
+Washington Wizards</p>
+<p><h2>OUEST</h2></p>
+<p><h2>NORTHWEST</h2>
 Denver Nuggets
 Minnesota Timberwolves
 Oklahoma City Thunder
 Portland Trail Blazers
-Utah Jazz
-PACIFIC
+Utah Jazz</p>
+<p><h2>PACIFIC</h2>
 Golden State Warriors
 LA Clippers
 Los Angeles Lakers
 Phoenix Suns
-Sacramento Kings
-SOUTHWEST
+Sacramento Kings</p>
+<p><h2>SOUTHWEST</h2>
 Dallas Mavericks
 Houston Rockets
 Memphis Grizzlies
 New Orleans Pelicans
-San Antonio Spurs
+San Antonio Spurs</p>
