--- a/03-liens/dossier1/fichier2.html
+++ b/03-liens/dossier1/fichier2.html
@@ -8,10 +8,11 @@
 			<br />
 			fichier
 			<br />
-			fichier 2
+			<a href="dossier1/fichier2.html">fichier 2</a>
 			<br />
-			fichier 3
+			<a href="dossier1/dossier3/fichier3.html">fichier 3</a>
 			<br />
-			fichier 4
+			<a href="dossier2/fichier4.html">fichier 4</a>
+			<br />
 		</body>
 	</html>
