--- a/03-liens/dossier2/fichier4.html
+++ b/03-liens/dossier2/fichier4.html
@@ -6,12 +6,11 @@
 			<h1>fichier 4</h1>
 			<img src="../images/4.gif" />
 			<br />
-			fichier
+			<a href="../fichier.html">fichier</a>
 			<br />
-			fichier 2
+			<a href="../dossier1/fichier2.html">fichier 2</a>
 			<br />
-			fichier 3
+			<a href="../dossier1/dossier3/fichier3.html">fichier 3</a>
 			<br />
-			fichier 4
 		</body>
 	</html>
