--- a/07-video-audio/media.html
+++ b/07-video-audio/media.html
@@ -4,6 +4,7 @@
 <html>
 <head></head>
 <body>
+<h1>Audio à écouter</h1>
 <ol>
 <li>Audio1</li>
 <audio controls autoplay >
@@ -21,5 +22,13 @@ src="https://file-examples.com/storage/fe602ed48f677b2319947f8/2017/11/file_exam
 src="https://file-examples.com/storage/fe602ed48f677b2319947f8/2017/11/file_example_MP3_2MG.mp3"/>
 </audio>
 </ol>
+<h2>Video à télécharger</h2>
+<ul>
+<li>Video 1</li>
+<video height="200px" controls="" autoplay= "" name="media">
+<source type="video/mp4"
+src="../../../video gabrielle.mp4"/>
+</video>
+</ul>
 </body>
 </html>
