--- a/08b-avec-selecteurs/css2.html
+++ b/08b-avec-selecteurs/css2.html
@@ -30,7 +30,26 @@
 				div#div1 p {
 					color: black;
 				}
+
+			    div p.class2 {
+					color:red;
+					font-size:30px;
+					
+				}
 				
+				div#div1 p.class2 {
+					color:green;
+					font-size:15px;
+				}
+
+				div#div1 p.class2 span{
+					color:hotpink;
+				}
+				.class3{
+					color:hotpink;
+					text-decoration-line:underline;
+					font-size: 30px;
+				}
 			</style>
 		</head>
 		<body>
